roughly done with tablet

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 
   <div class="container">
+    <div class="nav-img-Tablet">
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    </div>
     <nav>
       <a href="services.html">Services</a>
       <a href="#">Product</a>
